# sanic_openapi_ext

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
sanic_openapi_ext/: __init__.py  marshmallow.py
tests/: test_marshmallow.py
